--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,35 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-        }
-        .navbar {
-            background-color: #ff8c00 !important; /* Orange */
-        }
-        .navbar-brand {
-            color: white !important;
-            font-weight: bold;
-        }
-        .card {
-            margin-bottom: 20px;
-            border-left: 4px solid #ff8c00;
-        }
-        .card-header {
-            background-color: rgba(255, 140, 0, 0.1);
-            font-weight: bold;
-        }
-        .btn-primary {
-            background-color: #ff8c00;
-            border-color: #ff8c00;
-        }
-        .btn-primary:hover {
-            background-color: #e67e00;
-            border-color: #e67e00;
-        }
-    </style>
+    <link href="css/styles.css" rel="stylesheet">
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
@@ -52,44 +24,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-header">
-                            Events List
-                        </div>
-                        <div class="card-body">
-                            <!-- Loading message -->
-                            <div ng-if="loading" class="text-center">
-                                <div class="spinner-border text-primary" role="status">
-                                    <span class="visually-hidden">Loading...</span>
-                                </div>
-                                <p class="mt-2">Loading events...</p>
-                            </div>
-
-                            <!-- Error message -->
-                            <div ng-if="error" class="alert alert-danger">
-                                {{ error }}
-                            </div>
-
-                            <!-- No events message -->
-                            <div ng-if="!loading && !error && events.length === 0" class="alert alert-info">
-                                No events found.
-                            </div>
-
-                            <!-- Events list -->
-                            <div ng-if="!loading && events.length > 0">
-                                <div class="list-group">
-                                    <div class="card mb-3" ng-repeat="event in events">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{ event.title }}</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">{{ event.date | date:'medium' }}</h6>
-                                            <p class="card-text">{{ event.description }}</p>
-                                            <p class="card-text"><small class="text-muted"><strong>Location:</strong> {{ event.location }}</small></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Events list will be loaded here -->
+                    <div id="events-list-container"></div>
                 </div>
             </div>
         </div>
@@ -99,34 +35,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- AngularJS Application -->
-    <script>
-        angular.module('eventsApp', [])
-            .controller('EventsController', function($scope, $http) {
-                // Initialize variables
-                $scope.events = [];
-                $scope.loading = true;
-                $scope.error = null;
-
-                // Fetch events from the API
-                $scope.fetchEvents = function() {
-                    $scope.loading = true;
-                    $scope.error = null;
-
-                    $http.get('/api/events')
-                        .then(function(response) {
-                            $scope.events = response.data;
-                            $scope.loading = false;
-                        })
-                        .catch(function(error) {
-                            console.error('Error fetching events:', error);
-                            $scope.error = 'Failed to load events. Please try again later.';
-                            $scope.loading = false;
-                        });
-                };
-
-                // Initialize the controller
-                $scope.fetchEvents();
-            });
-    </script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
