docu: update frontend view with smaller list of events and details view

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -23,9 +23,13 @@
         <!-- Main Content -->
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
                     <!-- Events list will be loaded here -->
                     <div id="events-list-container"></div>
+                </div>
+                <div class="col-md-8">
+                    <!-- Event details will be loaded here -->
+                    <div id="event-details-container"></div>
                 </div>
             </div>
         </div>
