--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -39,6 +39,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- AngularJS Application -->
+    <script src="js/config.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/app.js"></script>
